Multi-dimensional flipped items, no longer locking Android orientation to portrait